--- a/index.html
+++ b/index.html
@@ -5,10 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banking Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
+<div id="login-area">
     <h1 class="text-center">Welcome to My Bank </h1>
+    <div class="submit-area">
+    <h3>Login</h3>
+    <input type="text" class="form-control" placeholder="E-mail">
+    <br>
+    <input type="password" class="form-control" name="" id="" placeholder="Password">
+    <br>
+    <button class="btn btn-success">Submit</button>
+
+
+
+    </div>
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
