--- a/index.html
+++ b/index.html
@@ -30,7 +30,28 @@
 </div>
 
 <div id="transaction">
-    <h2>Transaction Area</h2>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="deposit status">
+                <h5 class="text-center">Deposit</h5>
+                <h2 class="text-center">$00</h2>
+
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="withdraw status">
+                <h5 class="text-center">Withdraw</h5>
+            <h2 class="text-center">$250</h2>
+            </div>
+
+        </div>
+        <div class="col-md-4">
+            <div class="balance status">
+                <h5 class="text-center">Balance</h5>
+                <h2 class="text-center">$2300</h2>
+            </div>
+        </div>
+    </div>
 
 </div>
 
