--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="col-md-4">
             <div class="deposit status">
                 <h5 class="text-center">Deposit</h5>
-                <h2 class="text-center">$00</h2>
+                <h2 class="text-center">$ <span id="currentDeposit">00</span></h2>
 
             </div>
         </div>
@@ -48,7 +48,7 @@
         <div class="col-md-4">
             <div class="balance status">
                 <h5 class="text-center">Balance</h5>
-                <h2 class="text-center">$2300</h2>
+                <h2 class="text-center">$<span id="currentBalance">1000</span></h2>
             </div>
         </div>
     </div>
@@ -104,6 +104,30 @@
   depositBtn.addEventListener("click",function(){
       const depositAmount=document.getElementById("depositAmount").value;
       const depositNumber=parseFloat(depositAmount);
+     const currentDeposit=document.getElementById("currentDeposit").innerText;
+     const currentDepositNumber=parseFloat(currentDeposit);
+     const TotalDeposit=depositNumber+currentDepositNumber;
+     //console.log(TotalDeposit);
+     document.getElementById("currentDeposit").innerText=TotalDeposit;
+
+     const currentBalance=document.getElementById("currentBalance").innerText;
+     const mainBalance=parseFloat(currentBalance);
+     const totalBalance=depositNumber+mainBalance;
+     document.getElementById("currentBalance").innerText=totalBalance;
+
+
+
+
+
+
+
+     document.getElementById("depositAmount").value="";
+    
+
+
+
+
+
   })
 
 
